[gd_scene load_steps=6 format=3 uid="uid://dxyfh7kxfdmrs"]

[ext_resource type="PackedScene" uid="uid://c64bmw38umhl3" path="res://Assets/Player/EquipmentManager.tscn" id="1_g6qps"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerBody.gd" id="1_ly8rf"]
[ext_resource type="PackedScene" uid="uid://cbot5u4kvexfd" path="res://Assets/Player/dash_node.tscn" id="3_cq2dp"]
[ext_resource type="PackedScene" uid="uid://d0l7yolkys04g" path="res://Assets/Player/energy_node.tscn" id="4_oy8qm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i28xy"]

[node name="PlayerBody" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11724, 0)
script = ExtResource("1_ly8rf")

[node name="PlayerShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_i28xy")

[node name="OrientationManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.571512, 0)

[node name="PlayerCamera" type="Camera3D" parent="OrientationManager"]
cull_mask = 1048573
current = true

[node name="EquipmentViewportContainer" type="SubViewportContainer" parent="OrientationManager/PlayerCamera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentViewport" type="SubViewport" parent="OrientationManager/PlayerCamera/EquipmentViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="EquipmentManager" parent="OrientationManager/PlayerCamera/EquipmentViewportContainer/EquipmentViewport" instance=ExtResource("1_g6qps")]

[node name="DashNode" parent="." instance=ExtResource("3_cq2dp")]

[node name="EnergyNode" parent="." instance=ExtResource("4_oy8qm")]
